--- a/commentview/src/main/res/layout/view_stars.xml
+++ b/commentview/src/main/res/layout/view_stars.xml
@@ -3,4 +3,5 @@
     android:id="@+id/list_stars"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:overScrollMode="never"
     android:orientation="horizontal" />
